Fix the spacing between the dropdown and the titleLinkText

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -1368,10 +1368,6 @@ body.inboxsdk__gmailv1css .inboxsdk__resultsSection_title h3 {
   margin-right: 13px;
 }
 
-.inboxsdk__resultsSection_header_summaryText.Wm + .aAE {
-  margin-left: 3px;
-}
-
 .inboxsdk__resultsSection .TB.TC {
   text-align: center;
 }
